--- a/portfolio.html
+++ b/portfolio.html
@@ -4,43 +4,48 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/style3.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Les grilles</title>
+    <title>Portfolio</title>
   </head>
   <body>
-<h1>La grille bootstrap</h1>
 
 
 
+        <header>
+
+            <nav class="bg-light">
+                <div class="container">
+                    <div class="bg-secondary py-4">
+                    </div>
+                 </div>
+                 </nav>
+        </header>
+
+                    <main>
+                            <section  class="my-5">
+                               <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                    <h1>Je suis Ange Melissa Développeuse D'application Web</h1>
+                                    <h2></h2>
+                                    <button>Mon expertise Web</button>
+                                    </div>
+                                    
+                                   
+                                    <div class="col">
+                                        <img src="css/ange.JPG" alt="Photo de Melissa" class="w-100">
+                                    </div>
+                                </div>
+
+                               </div> 
 
 
-<div class="container">
-<div class="row">
-    <!-- <div class="col-4">col</div>
-    <div class="col-4">col</div>
-    <div class="col-4">col</div> -->
+                            </section>  
 
-
-    <div class="col-lg-4">col</div>
-    <div class="col-lg-4">col</div>
-    <div class="col-lg-4">col</div>
-
-
-     <div class="col-md-4">col</div>
-    <div class="col-md-4">col</div>
-    <div class="col-md-4">col</div>
-</div>
-
-
-</div>
-
-
-
-
-
+                    </main>
 
 
 
