--- a/offset.html
+++ b/offset.html
@@ -8,65 +8,50 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Les grilles</title>
+    <title>Offset</title>
   </head>
   <body>
-<h1>La grille bootstrap</h1>
-
-
-
-
 
 <div class="container">
-<!-- <div class="row">
-    <!-- <div class="col-4">col</div>
-    <div class="col-4">col</div>
-    <div class="col-4">col</div> -->
-
-
-    <!-- <div class="col-lg-4">col</div>
-    <div class="col-lg-4">col</div>
-    <div class="col-lg-4">col</div>
-
-
-     <div class="col-md-4">col</div>
-    <div class="col-md-4">col</div>
-    <div class="col-md-4">col</div>
-</div>
-
-
-</div> -->
-
-
-
-
-<!-- 
-
-
 <div class="row">
-   <div class="col">
-   ...
-   </div>
-   <div class="col">
-   ...
-   </div>
-   <div class="col">
-   ...
-   </div>
-</div>  --> 
 
-
-<div class="row">
-   <div class="col-6 col-md-4">...</div>
-   <div class="col-6 col-md-8">...</div>
+    <div class="col-md-4">.col-md-4</div>
+    <div class="col-md-4 offset-md-4">.col-md-4</div>
+   
 </div>
 
 
 
+
 <div class="row">
-   <div class="col-6 ">...</div>
-   <div class="col-6 ">...</div>
+
+    <div class="col-md-3 offset-md-3">.col-md-3 .offset-md-3</div>
+    <div class="col-md-3 offset-md-3">.col-md-3 .offset-md-3</div>
+   
 </div>
+
+
+
+
+
+<div class="row">
+
+    <div class="col-md-6 offset-md-3">.col-md-6 .offset-md-3</div>
+
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
