--- a/portfolio.html
+++ b/portfolio.html
@@ -27,15 +27,15 @@
                     <main>
                             <section  class="my-5">
                                <div class="container">
-                                <div class="row">
-                                    <div class="col">
+                                <div class="row gy-4 gy-md-0">
+                                    <div class="col-12 col-md-6">
                                     <h1>Je suis Ange Melissa Développeuse D'application Web</h1>
                                     <h2></h2>
                                     <button>Mon expertise Web</button>
                                     </div>
                                     
                                    
-                                    <div class="col">
+                                    <div class="col-12 col-md-6">
                                         <img src="css/ange.JPG" alt="Photo de Melissa" class="w-100">
                                     </div>
                                 </div>
