--- a/text.html
+++ b/text.html
@@ -4,36 +4,26 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/style3.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Les grilles</title>
+    <title>colonne</title>
   </head>
   <body>
-<h1>La grille bootstrap</h1>
 
 
 
+<p class="fw-bold">Bold text.</p>
+<p class="fw-bolder">Bolder weight text (relative to the parent element).</p>
+<p class="fw-normal">Normal weight text.</p>
+<p class="fw-light">Light weight text.</p>
+<p class="fw-lighter">Lighter weight text (relative to the parent element).</p>
+<p class="fst-italic">Italic text.</p>
+<p class="fst-normal">Text with normal font style</p>
 
-
-<div class="container">
-
-  
-
-
-<div class="row">
-   <div class="col-6 col-md-4 col-sm-2">...e</div><div class="col-6 col-md-8">...a</div>
-</div>
-
-
-
-<div class="row">
-   <div class="col-6 ">...</div>
-   <div class="col-6 ">...</div>
-</div>
-
-
+<div class="fw-bold">je teste</div>
+<div class="fw-light">bienvenue</div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
