--- a/colonne.html
+++ b/colonne.html
@@ -4,34 +4,32 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/style3.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Les grilles</title>
+    <title>colonne</title>
   </head>
   <body>
-<h1>La grille bootstrap</h1>
 
-
-
-
-
-<div class="container">
-
-  
-
-
-<div class="row">
-   <div class="col-6 col-md-4 col-sm-2">...e</div><div class="col-6 col-md-8">...a</div>
-</div>
 
 
 
 <div class="row">
-   <div class="col-6 ">...</div>
-   <div class="col-6 ">...</div>
-</div>
+   <div class="col">
+   ...
+   </div>
+   <div class="col">
+   ...
+   </div>
+   <div class="col">
+   ...
+   </div>
+</div> 
+
+
+
+
 
 
 
